--- a/app.css
+++ b/app.css
@@ -1,16 +1,31 @@
+.meme-form {
+    text-align: center;
+}
+
 .container {
     position: relative;
+    width: fit-content;
+    height: fit-content;
 }
 
 .top-text {
-    text-align: center;
     position: absolute;
+    text-align: center;
+    word-wrap: break-word;
     top: 10px;
+    left: 0;
+    width: 100%;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .bottom-text {
     position: absolute;
+    text-align: center;
+    word-wrap: break-word;
+    left: 0;
     bottom: 10px;
+    width: 100%;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
