--- a/app.css
+++ b/app.css
@@ -17,6 +17,8 @@
     width: 100%;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 .bottom-text {
@@ -28,4 +30,6 @@
     width: 100%;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
