--- a/app.css
+++ b/app.css
@@ -33,3 +33,11 @@
     -webkit-text-stroke-width: 1.5px;
     -webkit-text-stroke-color: black;
 }
+
+.delete-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 10%;
+    height: 10%;
+}
